--- a/inst/assets/css/css_loader.css
+++ b/inst/assets/css/css_loader.css
@@ -35,18 +35,22 @@ by loading.io With CC0 License
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.sps-cssloader {
+
+}
+
 /*circle*/
 .lds-circle {
   display: inline-block;
+  width: inherit;
+  height: inherit;
   transform: translateZ(1px);
 }
 .lds-circle > div {
   display: inline-block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
+  width: inherit;
+  height: inherit;
   border-radius: 50%;
-  background: var(--primary);
   animation: lds-circle 5s cubic-bezier(0.2, 0.4, 1, 2) infinite;
 }
 @keyframes lds-circle {
@@ -64,3 +68,426 @@ by loading.io With CC0 License
     transform: rotateY(3600deg);
   }
 }
+
+/*dual-ring*/
+.lds-dual-ring {
+  display: inline-block;
+  width: inherit;
+  height: inherit;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: inherit;
+  height: inherit;
+  border-radius: 50%;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/*facebook*/
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+}
+
+
+/*heart*/
+.lds-heart {
+  display: inline-block;
+  position: relative;
+  transform: rotate(45deg);
+}
+.lds-heart div {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.lds-heart div:after,
+.lds-heart div:before {
+  content: " ";
+  position: absolute;
+  display: block;
+  width: inherit;
+  height: inherit;
+}
+@keyframes lds-heart {
+  0% {
+    transform: scale(0.95);
+  }
+  5% {
+    transform: scale(1.1);
+  }
+  39% {
+    transform: scale(0.85);
+  }
+  45% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(0.9);
+  }
+}
+
+/*ring*/
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+/*roller*/
+.lds-roller {
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+}
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  border-radius: 50%;
+  margin: -4px 0 0 -4px;
+}
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+/*default*/
+.lds-default {
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-default div {
+  position: absolute;
+  border-radius: 50%;
+  animation: lds-default 1.2s linear infinite;
+}
+.lds-default div:nth-child(1) {
+  animation-delay: 0s;
+}
+.lds-default div:nth-child(2) {
+  animation-delay: -0.1s;
+}
+.lds-default div:nth-child(3) {
+  animation-delay: -0.2s;
+}
+.lds-default div:nth-child(4) {
+  animation-delay: -0.3s;
+}
+.lds-default div:nth-child(5) {
+  animation-delay: -0.4s;
+}
+.lds-default div:nth-child(6) {
+  animation-delay: -0.5s;
+}
+.lds-default div:nth-child(7) {
+  animation-delay: -0.6s;
+}
+.lds-default div:nth-child(8) {
+  animation-delay: -0.7s;
+}
+.lds-default div:nth-child(9) {
+  animation-delay: -0.8s;
+}
+.lds-default div:nth-child(10) {
+  animation-delay: -0.9s;
+}
+.lds-default div:nth-child(11) {
+  animation-delay: -1s;
+}
+.lds-default div:nth-child(12) {
+  animation-delay: -1.1s;
+}
+@keyframes lds-default {
+  0%, 20%, 80%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+}
+
+
+/*ellipsis*/
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-ellipsis div {
+  position: absolute;
+  border-radius: 50%;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+/*grid*/
+.lds-grid {
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-grid div {
+  position: absolute;
+  border-radius: 50%;
+  animation: lds-grid 1.2s linear infinite;
+}
+.lds-grid div:nth-child(1) {
+  animation-delay: 0s;
+}
+.lds-grid div:nth-child(2) {
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(3) {
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(4) {
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(5) {
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(6) {
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(7) {
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(8) {
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(9) {
+  animation-delay: -1.6s;
+}
+@keyframes lds-grid {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+
+
+/*hourglass*/
+.lds-hourglass {
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  box-sizing: border-box;
+  animation: lds-hourglass 1.8s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
+}
+
+/*ripple*/
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-ripple div {
+  position: absolute;
+  opacity: 1;
+  border-radius: 50%;
+}
+
+/*spinner*/
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+.lds-spinner div {
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  border-radius: 20%;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
