--- a/inst/assets/css/sps_pg_panel.css
+++ b/inst/assets/css/sps_pg_panel.css
@@ -37,6 +37,7 @@
 .sps-pg-panel .timeline > li > .timeline-item {
     -webkit-box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
     box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    background-color: rgb(248 248 248);
     border-radius: 3px;
     margin-top: 0;
     color: #444;
